--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.5",
     "@apollo/react-hooks": "^3.1.3",
     "apollo-boost": "^0.4.4",
     "baseui": "^9.65.3",
